docs/api/qiskit-addon-aqc-tensor/0.2/objective.mdx
---
title: objective (v0.2)
description: API reference for qiskit_addon_aqc_tensor.objective in qiskit-addon-aqc-tensor v0.2
in_page_toc_min_heading_level: 2
python_api_type: module
python_api_name: qiskit_addon_aqc_tensor.objective
---

<span id="module-qiskit_addon_aqc_tensor.objective" />

<span id="objective-function-s-qiskit-addon-aqc-tensor-objective" />

# Objective function(s)

`qiskit_addon_aqc_tensor.objective`

Code for building and evaluating objective functions used for AQC parameter optimization.

Currently, this module provides the simplest possible objective function, [`MaximizeStateFidelity`](#qiskit_addon_aqc_tensor.objective.MaximizeStateFidelity "qiskit_addon_aqc_tensor.objective.MaximizeStateFidelity").

### MaximizeStateFidelity

<Class id="qiskit_addon_aqc_tensor.objective.MaximizeStateFidelity" github="https://github.com/Qiskit/qiskit-addon-aqc-tensor/tree/stable/0.2/qiskit_addon_aqc_tensor/objective.py#L33-L103" signature="MaximizeStateFidelity(target, ansatz, settings)" modifiers="class">
  Bases: [`object`](https://docs.python.org/3/library/functions.html#object)

  Simplest possible objective function for use with AQC-Tensor.

  Its definition is given by Eq. (7) in [arXiv:2301.08609v6](https://arxiv.org/abs/2301.08609v6):

$$
C = 1 - \left| \langle 0 | V^{\dagger}(\vec\theta) | \psi_\mathrm{target} \rangle \right|^2 .
$$

  Minimizing this function is equivalent to maximizing the pure-state fidelity between the state prepared by the ansatz circuit at the current parameter point, $V(\vec\theta) |0\rangle$, and the target state, $| \psi_\mathrm{target} \rangle$.

  When called with an [`ndarray`](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray) of parameters, this object will return `(objective_value, gradient)` as a `tuple[float, numpy.ndarray]`.

  Initialize the objective function.

  **Parameters**

  *   **ansatz** ([`QuantumCircuit`](/docs/api/qiskit/qiskit.circuit.QuantumCircuit)) – Parametrized ansatz circuit.
  *   **target** ([`TensorNetworkState`](simulation#qiskit_addon_aqc_tensor.simulation.TensorNetworkState "qiskit_addon_aqc_tensor.simulation.abstract.TensorNetworkState")) – Target state in tensor-network representation.
  *   **settings** ([`TensorNetworkSimulationSettings`](simulation#qiskit_addon_aqc_tensor.simulation.TensorNetworkSimulationSettings "qiskit_addon_aqc_tensor.simulation.abstract.TensorNetworkSimulationSettings")) – Tensor network simulation settings.

  #### loss\_function

  <Function id="qiskit_addon_aqc_tensor.objective.MaximizeStateFidelity.loss_function" github="https://github.com/Qiskit/qiskit-addon-aqc-tensor/tree/stable/0.2/qiskit_addon_aqc_tensor/objective.py#L92-L98" signature="loss_function(x)">
    Evaluate `(objective_value, gradient)` of function at point `x`.

    **Return type**

    [`tuple`](https://docs.python.org/3/library/stdtypes.html#tuple)\[[`float`](https://docs.python.org/3/library/functions.html#float), [`ndarray`](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray)]

    **Parameters**

    **x** ([*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray))
  </Function>

  #### target

  <Attribute id="qiskit_addon_aqc_tensor.objective.MaximizeStateFidelity.target" attributeTypeHint="TensorNetworkState">
    Target tensor network.
  </Attribute>
</Class>

### OneMinusFidelity

<Class id="qiskit_addon_aqc_tensor.objective.OneMinusFidelity" github="https://github.com/Qiskit/qiskit-addon-aqc-tensor/tree/stable/0.2/qiskit_addon_aqc_tensor/objective.py#L106-L131" signature="OneMinusFidelity(target, ansatz, settings)" modifiers="class">
  Bases: [`MaximizeStateFidelity`](#qiskit_addon_aqc_tensor.objective.MaximizeStateFidelity "qiskit_addon_aqc_tensor.objective.MaximizeStateFidelity")

  DEPRECATED objective function, equivalent to [`MaximizeStateFidelity`](#qiskit_addon_aqc_tensor.objective.MaximizeStateFidelity "qiskit_addon_aqc_tensor.objective.MaximizeStateFidelity").

  Initialize the objective function.

  The [`OneMinusFidelity`](#qiskit_addon_aqc_tensor.objective.OneMinusFidelity "qiskit_addon_aqc_tensor.objective.OneMinusFidelity") class is DEPRECATED since v0.2. Please migrate to [`MaximizeStateFidelity`](#qiskit_addon_aqc_tensor.objective.MaximizeStateFidelity "qiskit_addon_aqc_tensor.objective.MaximizeStateFidelity") as soon as possible.

  <Admonition title="Deprecated since version 0.2.0" type="danger">
    The class `qiskit_addon_aqc_tensor.objective.OneMinusFidelity` is deprecated as of qiskit-addon-aqc-tensor 0.2.0. It will be removed no earlier than v0.4.0. This class has been renamed to `MaximizeStateFidelity`.
  </Admonition>

  **Parameters**

  *   **ansatz** ([`QuantumCircuit`](/docs/api/qiskit/qiskit.circuit.QuantumCircuit)) – Parametrized ansatz circuit.
  *   **target** ([`TensorNetworkState`](simulation#qiskit_addon_aqc_tensor.simulation.TensorNetworkState "qiskit_addon_aqc_tensor.simulation.abstract.TensorNetworkState")) – Target state in tensor-network representation.
  *   **settings** ([`TensorNetworkSimulationSettings`](simulation#qiskit_addon_aqc_tensor.simulation.TensorNetworkSimulationSettings "qiskit_addon_aqc_tensor.simulation.abstract.TensorNetworkSimulationSettings")) – Tensor network simulation settings.

  #### \_\_call\_\_

  <Function id="qiskit_addon_aqc_tensor.objective.OneMinusFidelity.__call__" github="https://github.com/Qiskit/qiskit-addon-aqc-tensor/tree/stable/0.2/qiskit_addon_aqc_tensor/objective.py#L75-L90" signature="__call__(x)">
    Evaluate `(objective_value, gradient)` of function at point `x`.

    This method is DEPRECATED since v0.2. The [`loss_function()`](#qiskit_addon_aqc_tensor.objective.MaximizeStateFidelity.loss_function "qiskit_addon_aqc_tensor.objective.MaximizeStateFidelity.loss_function") method should be called instead.

    **Return type**

    [`tuple`](https://docs.python.org/3/library/stdtypes.html#tuple)\[[`float`](https://docs.python.org/3/library/functions.html#float), [`ndarray`](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray)]

    **Parameters**

    **x** ([*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray))

    <Admonition title="Deprecated since version 0.2.0" type="danger">
      The method `qiskit_addon_aqc_tensor.objective.MaximizeStateFidelity.__call__()` is deprecated as of qiskit-addon-aqc-tensor 0.2.0. It will be removed no earlier than v0.4.0. Going forward, the `loss_function` method should be called instead of calling the instance directly.
    </Admonition>
  </Function>

  #### loss\_function

  <Function id="qiskit_addon_aqc_tensor.objective.OneMinusFidelity.loss_function" github="https://github.com/Qiskit/qiskit-addon-aqc-tensor/tree/stable/0.2/qiskit_addon_aqc_tensor/objective.py#L92-L98" signature="loss_function(x)">
    Evaluate `(objective_value, gradient)` of function at point `x`.

    **Return type**

    [`tuple`](https://docs.python.org/3/library/stdtypes.html#tuple)\[[`float`](https://docs.python.org/3/library/functions.html#float), [`ndarray`](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray)]

    **Parameters**

    **x** ([*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray))
  </Function>

  #### target

  <Attribute id="qiskit_addon_aqc_tensor.objective.OneMinusFidelity.target" attributeTypeHint="TensorNetworkState">
    Target tensor network.
  </Attribute>
</Class>

